# snapOCR

./: .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml
.github/workflows/: pylint.yml
assets/: snapOCR.xcf
dod_training_helper/: main.py
dod_training_helper/roi_extract/: __init__.py  auto_extract.py  manual_extract.py
snapOCR/: main.py  main.spec
snapOCR/bundler/win/: main.spec  snapOCR_installer.nsi
snapOCR/release/linux/: snapOCR.service
snapOCR/roi_extract/: __init__.py  manual_extract.py
win_bundler/: snapOCR_installer.nsi
